# routes/api.php
@@ -3,12 +3,13 @@
 use Illuminate\Support\Facades\Route;
 use App\Http\Controllers\API\AuthController;
 use App\Http\Controllers\API\FoodController;
+use App\Http\Controllers\API\TablesController;
 
 Route::post('/login', [AuthController::class, 'login']);
 Route::middleware('auth:sanctum')->group(function () {
     Route::get('/profile', [AuthController::class, 'profile']);
     Route::post('/logout', [AuthController::class, 'logout']);
-});
-Route::middleware('auth:sanctum')->group(function () {
-    Route::apiResource('foods', FoodController::class);
+    Route::apiResource('/foods', FoodController::class);
+    Route::apiResource('/tables', TablesController::class);
+    Route::post('/tables/{id}/reservation', [TablesController::class, 'reservation']);
 });
